@@ -56,7 +56,7 @@ local incremental_movement_speed = 0.125
 
 -- Misc Settings
 local vision_distance = 35
-local pollution_to_join_attack = 200
+local pollution_to_join_attack = 150
 local distraction_cooldown = 20
 
 -- Animation Settings
