@@ -8,8 +8,10 @@ Date: ???
   Changes:
     - Up unit_scale on various units
     - Refactor projectiles, move damage calculation to damage_modifier. Some units got minor damage buff.
-    - Buff cannon damage and its range from 20 to 30 and its shooting speed at lower level.
+    - Buff colony damage and its range from 20 to 30 and its shooting speed at lower level.
     - Added "not-flammable" tag to ultralisk, all flying units
+    - change infest movement speed to same as zerglings
+    - Adjusted pollution_to_join_attack values, overall lower required values.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.11.0
